--- a/client-data/board.css
+++ b/client-data/board.css
@@ -43,18 +43,20 @@ html, body, svg {
 	-ms-overflow-style: none;
 	scrollbar-width: none;
 	font-size: 16px;
-	border-radius: 0;
+	border-radius: 15px;
 	overflow-y: scroll;
 	position: fixed;
-	margin-bottom: 30px;
+	margin-left: 20px;
 	left: 0;
-	top: 0;
+	top: 50%;
+	transform: translate(0, -50%);
 	color: black;
 	max-height: 100%;
 	transition-duration: 1s;
 	cursor: default;
-	padding: 10px;
 	pointer-events: none;
+	border: 3px solid black;
+	background-color: white;
 }
 
 #menu.closed {
@@ -97,13 +99,11 @@ html, body, svg {
 	user-select: none; /* Non-prefixed version, currently
                                   supported by Chrome, Opera and Firefox */
 	pointer-events: auto;
-	white-space: nowrap;
 	list-style-position:inside;
-	border:1px solid #eeeeee;
 	text-decoration:none;
 	cursor:pointer;
 	background: #ffffff;
-	margin-top: 10px;
+	margin: 10px 3px 0px 3px;
 	height: 40px;
 	line-height: 40px;
 	border-radius: 0px;
@@ -111,30 +111,7 @@ html, body, svg {
 	transition-duration: .2s;
 	overflow: hidden;
 	width: max-content;
-	box-shadow: inset 0 0 3px #8FA2BC;
-}
-
-#menu .tool:hover {
-	max-width: 100%;
-}
-
-@media (hover: none), (pointer: coarse) {
-	#menu .tool:hover {
-		max-width: 40px;
-	}
-
-	#menu .tool:focus {
-		max-width: 100%;
-	}
-
-	#menu {
-		pointer-events: auto;
-	}
-
-	#menu:focus-within {
-		pointer-events: none;
-	}
-
+	border-radius: 4px;
 }
 
 #menu .oneTouch:active {
@@ -148,8 +125,7 @@ html, body, svg {
 }
 
 #menu .tool.curTool {
-  box-shadow: 0 0 5px #0074D9;
-  background: linear-gradient(#96E1FF, #36A2FF);
+  background: lightgray;
 }
 
 #menu .tool-icon {
@@ -191,36 +167,22 @@ html, body, svg {
 
 }
 
-#menu .tool.hasSecondary .tool-icon{
-	margin-top:0px;
-	margin-left:0px;
-}
-
 #menu .tool .tool-icon.secondaryIcon{
 	display: none;
 }
 
-#menu .tool.hasSecondary .tool-icon.secondaryIcon{
-	display: block;
-	position: absolute;
-    bottom: 0px;
-    left: 26px;
-    width: 12px;
-    height: 12px;
-}
 
 input {
 	font-size:16px;
 }
 
 #chooseColor {
-	width: 100%;
-	height:100%;
+	width: 100% !important;
+	height:100% !important;
 	border: 0;
-	border-radius: 0;
 	color:black;
 	display: block;
-	margin: 0;
+	margin: 0 !important;
 	padding: 0;
 }
 
