tekenplatform nog zonder homepage

--- a/client-data/board.css
+++ b/client-data/board.css
@@ -1,16 +1,98 @@
 html, body, svg {
 	padding:0;
 	margin:0;
-	font-family: Liberation sans, sans-serif;
+	font-family: 'Alef', sans-serif;
 }
 
 #canvas {
 	transform-origin: 0 0;
 }
 
+#infoheader{
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	width: 40%;
+	padding: 20px;
+	font-size: 1em;
+	line-height: 1.1em;
+	word-wrap: break-word;
+	cursor: pointer;
+	max-height: 60%;
+    overflow-y: auto;
+}
+
+#qrcode{
+	width: 15%;
+	display: flex;
+	flex-direction: column;
+	padding: 12px;
+	right: 20px;
+	bottom: 20px;
+	cursor: pointer;
+}
+
+#foot {
+	display: flex;
+	flex-direction: row;
+	padding: 6px;
+	left: 20px;
+	bottom: 20px;
+}
+
+#foot a{
+	margin: 0px 12px;
+	text-decoration: none;
+}
+
+#help{
+	width: 50%;
+	height: 70%;
+	display: none;
+	flex-direction: column;
+	padding: 2px;
+	left: 50%;
+	top: 50%;
+	transform: translate(-50%, -50%);
+	cursor: pointer;
+}
+
+#help section{
+	padding: 10px;
+	overflow-y: scroll;
+}
+
+#help div{
+	display: flex;
+	flex-direction: row;
+}
+
+#help strong{
+	text-align: center;
+}
+
+#help p{
+	padding-left: 12px;
+	text-align: left;
+}
+
+a {
+	color: #000000;
+	word-wrap: break-word;
+}
+
+.overlay{
+	text-align: center;
+	border-radius: 10px;
+	position: fixed;
+	z-index: 1;
+	border: 2px solid #333333;
+	transition: 1s;
+	background-color: white;
+}
+
 #loadingMessage {
 	font-size: 1.5em;
-	background: #eee linear-gradient(#eeeeee, #cccccc);
 	padding: 20px;
 	width: 40%;
 	line-height: 50px;
@@ -20,7 +102,7 @@ html, body, svg {
 	top: 40%;
 	left: 30%;
 	z-index: 1;
-	box-shadow: 0 0 2px #333333;
+	border: 2px solid #333333;
 	transition: 1s;
 }
 
@@ -55,7 +137,7 @@ html, body, svg {
 	transition-duration: 1s;
 	cursor: default;
 	pointer-events: none;
-	border: 3px solid black;
+	border: 2px solid black;
 	background-color: white;
 }
 
@@ -86,7 +168,29 @@ html, body, svg {
 }
 
 #settings {
-	margin-bottom: 0;
+	margin-bottom: 16px;
+	margin-top: 0;
+}
+#settings hr{
+	width: 66%;
+	height: 2px;
+	border-width :0;
+	color: black;
+	background-color: black;
+}
+
+#input-color-container{
+	position: relative;
+  	overflow: hidden;
+  	width: 33px;
+  	height: 33px;
+  	border-radius: 40px;
+	left: 3px;
+	top: 2px;
+}
+
+#tools {
+	margin-bottom: 3px !important;
 }
 
 #menu .tool {
@@ -184,6 +288,14 @@ input {
 	display: block;
 	margin: 0 !important;
 	padding: 0;
+	background-color: white;
+	margin-top: 3px;
+	position: absolute;
+	right: -8px !important;
+	top: -8px !important;
+	width: 56px !important;
+	height: 56px !important;
+	border: none;
 }
 
 .colorPresets {
@@ -248,3 +360,13 @@ circle.opcursor {
 		line-height: 10px;
 	}
 }
+
+@media only screen and (max-width: 700px) {
+	#qrcode {
+	  display: none;
+	}
+	#foot {
+		justify-content: space-between;
+		width: 85%;
+	}
+  }
