--- a/client-data/index.css
+++ b/client-data/index.css
@@ -1,29 +1,30 @@
 html {
-	background: linear-gradient(135deg, #c4dfffa0, transparent), url(background.png);
 	width:100%;
-	min-height: 100%;
 	margin:0;
-	font-family: sans-serif;
+	font-family: 'Alef', sans-serif;
 	font-weight: 300;
 	font-size: 15px;
 }
 
 body {
-	position: absolute;
 	display: flex;
 	flex-direction: column;
-	min-height: 100%;
 	margin: 0;
 	width: 100%;
 }
 
 header {
-	position:fixed;
-	left:0;
-	top:0;
-	text-shadow: 1px 1px 2px #eee;
-	width:100%;
-	z-index: 2;
+	display: flex;
+	flex-direction: row;
+	justify-content: center;
+	border-bottom: 2px solid black;
+	padding: 0px 16px;
+}
+
+#title{
+	text-align: left;
+	flex-grow: 10;
+	margin-left: 8px;
 }
 
 h1, h2 {
@@ -37,9 +38,6 @@ h3 {
 
 main {
 	margin: auto;
-	margin-top: 80px;
-	width:100%;
-	max-width: 1250px;
 	font-size: 1.1em;
 	position:relative;
 	text-align:justify;
@@ -64,13 +62,12 @@ main>div {
 	justify-content: space-between;
 	border-radius: .2em;
 }
-
+/*
 main>div:hover {
 	transform:scale(1.03);
 }
-
+*/
 header, main>div {
-	box-shadow: 2px 2px 10px #666;
 	background-color:#fff;
 }
 
@@ -117,25 +114,66 @@ input {
 	width: 75%;
 }
 
+.overlay{
+	text-align: center;
+	border-radius: 10px;
+	position: absolute;
+	z-index: 1;
+	border: 2px solid #333333;
+	transition: 1s;
+	background-color: white;
+	padding: 0px 10px;
+}
+
+#cta{
+	width: 250px;
+	padding: 0px 10px 20px 10px;
+	right: 30px;
+	top:35%;
+	z-index: 4;
+}
+
+#cta a{
+	background-color: black;
+	color: white;
+	text-decoration: none;
+	border-radius: 10px;
+	padding: 10px;
+}
+
+#explanation{
+	width: 30%;
+	max-width: 300px;
+	min-width: 220px;
+	padding: 10px;
+	top: 50%;
+	left: 30px;
+	z-index: 3;
+}
+
 footer {
 	text-align: center;
-	flex-shrink: 0;
-	height: 40px;
+	position: relative !important;
+	margin: 20px;
+	top: -40px;
+	left: 20%;
+	width: 70%;
+	padding: 0px 10px 10px 10px !important;
 }
 
-footer a {
-	opacity: .3;
+footer p {
+	margin-bottom: 20px;
 }
 
-footer a:hover {
-	opacity: 1;
+a {
+	color: #000000;
+	word-wrap: break-word;
 }
 
 .lang-selector {
-	top: 20px;
+	left: 20px;
 	right:20px;
 	position: absolute;
-	overflow: hidden;
 	padding: 10px;
 }
 
@@ -151,7 +189,6 @@ footer a:hover {
 	width: 50px;
 	background: white;
 	max-height: 0;
-	overflow: hidden;
 	transition-duration: 1s;
 	border-radius: 5px;
 }
@@ -180,3 +217,32 @@ footer a:hover {
 	list-style: circle;
 	list-style: disclosure-closed;
 }
+
+.smallink{
+	margin: 30px;
+	opacity: .8;
+}
+
+.smallink:hover{
+	opacity: 1;
+	transition: .4s;
+}
+
+@media only screen and (max-width: 900px) {
+	footer {
+		position: absolute !important;
+	  	top: 90%;
+	}
+  }
+
+  @media only screen and (max-width: 600px) {
+	#explanation {
+	  	top: 60%;
+		  max-width: 400px;
+		  min-width: auto;
+		  width: auto;
+		  right: 20px;
+		  left: 5px;
+
+	}
+  }
