--- a/client-data/index.css
+++ b/client-data/index.css
@@ -154,7 +154,6 @@ input {
 footer {
 	text-align: center;
 	position: relative !important;
-	margin: 20px;
 	top: -40px;
 	left: 20%;
 	width: 70%;
@@ -213,6 +212,10 @@ a {
 	display: block;
 }
 
+#headimg{
+	filter: blur(3px);
+}
+
 .lang-selector li:hover {
 	list-style: circle;
 	list-style: disclosure-closed;
@@ -231,18 +234,30 @@ a {
 @media only screen and (max-width: 900px) {
 	footer {
 		position: absolute !important;
-	  	top: 90%;
+		top: 90%;
 	}
   }
 
   @media only screen and (max-width: 600px) {
-	#explanation {
-	  	top: 60%;
-		  max-width: 400px;
-		  min-width: auto;
-		  width: auto;
-		  right: 20px;
-		  left: 5px;
+	.overlay{
+		position: relative !important;
+	}
 
+	#cta{
+		right: 0;
+		top: -30px;
+		margin: auto;
+	}
+	
+	#explanation {
+		top: -35px;
+		margin-left: 10%;
+		margin-right: 5px;
+		left: 0;
+		width: auto;
+	}
+
+	footer{
+		top: -40px;
 	}
   }
