--- a/client-data/board.css
+++ b/client-data/board.css
@@ -106,6 +106,21 @@ a {
 	transition: 1s;
 }
 
+#infotop {
+	font-size: 1.2em;
+	padding: 20px;
+	width: 40%;
+	text-align: center;
+	border-radius: 10px;
+	position:fixed;
+	top: 5%;
+	left: 50%;
+	transform: translate(-50%, 0%);
+	z-index: 1;
+	border: 2px solid #333333;
+	transition: 1s;
+}
+
 #loadingMessage.hidden {
 	display: none;
 	opacity: 0;
